Indizes angepasst (insb. Paragraphe-Index gefixt)
sghandbuch.cls:
	+ \indexIdx (Alias für \index[idx])
	+ \indexPar (Alias für \index[paridx])
	+ \indexRul (Alias für \index[ruling])

*.tex:
	Verwendung der Aliase statt urspr. Befehle

--- a/Dokumentation.tex
+++ b/Dokumentation.tex
@@ -1,10 +1,10 @@
 % \begin{refsection}
-%\chapterpreamble{Dokumentiert (vgl. \S~14~SGO\index[paridx]{SGO!14@\S~14}) werden Verfahrensakten und Urteile.
+%\chapterpreamble{Dokumentiert (vgl. \S~14~SGO\indexPar{SGO!14@\S~14}) werden Verfahrensakten und Urteile.
 %Die Verfahrensakte umfasst sämtliche verfahrensrelevante Kommunikation des Gerichts mit den Parteien (und umgekehrt).
 %Das umfasst auch Aktennotizen, die sich auf den Verfahrensverlauf beziehen (z.B. bei telefonisch gestellten Anträgen o.ä.).
 %Interne Kommunikation des Gerichts, auch wertende Notizen einzelner Mitglieder des Gremiums, gehören nicht zur Verfahrensakte.
-%Werden während Verfahren Tonaufzeichnungen angefertigt, sind diese zu löschen, sobald die Parteien das daraus angefertigte Protokoll erhalten und einen Monat keinen Widerspruch erhoben haben, \S~14 Abs.~3~SGO\index[paridx]{SGO!14@\S~14!3@Abs.~3}.
-%Die Verfahrensakte ist fünf Jahre nach Abschluss des Verfahrens aufzubewahren, Urteile unbefristet, \S~14~Abs.~5~SGO\index[paridx]{SGO!14@\S~14!5@Abs.~5}.}
+%Werden während Verfahren Tonaufzeichnungen angefertigt, sind diese zu löschen, sobald die Parteien das daraus angefertigte Protokoll erhalten und einen Monat keinen Widerspruch erhoben haben, \S~14 Abs.~3~SGO\indexPar{SGO!14@\S~14!3@Abs.~3}.
+%Die Verfahrensakte ist fünf Jahre nach Abschluss des Verfahrens aufzubewahren, Urteile unbefristet, \S~14~Abs.~5~SGO\indexPar{SGO!14@\S~14!5@Abs.~5}.}
 \chapterpreamble{Sir~James~Norrington: \enquote{Ihr seid der schlechteste Pirat, von dem ich je gehört habe.}\\
 Jack~Sparrow: \enquote{Aber Ihr habt von mir gehört!}\\
 --~Fluch der Karibik (US, 2003)}
@@ -13,25 +13,25 @@ Jack~Sparrow: \enquote{Aber Ihr habt von mir gehört!}\\
 
 \chapter{Dokumentation und Rechenschaftslegung}
 \label{Dokumentation}
-Die Dokumentationspflichten der Schiedsgerichte sind in \S~14~SGO\index[paridx]{SGO!14@\S~14} geregelt.
+Die Dokumentationspflichten der Schiedsgerichte sind in \S~14~SGO\indexPar{SGO!14@\S~14} geregelt.
 Diese Dokumentation ist für den Gebrauch im Verfahren bestimmt; bezieht sich also auf die Verfahrensakte.
-Dies dient einerseits dazu, das Verfahren zu erleichtern (vgl.\nomenclature{vgl.}{vergleiche} auch \S~10 Abs.~1 S.~3~SGO),\index[paridx]{SGO!10@\S~10!1@Abs.~1} andererseits auch zur Verwendung durch eine Rechtsmittelinstanz.
-Darüber hinaus dient die Dokumentation auch dem längerfristigen Nachweis, \S~14 Abs.~5~SGO\index[paridx]{SGO!14@\S~14!5@Abs.~5}.
+Dies dient einerseits dazu, das Verfahren zu erleichtern (vgl.\nomenclature{vgl.}{vergleiche} auch \S~10 Abs.~1 S.~3~SGO),\indexPar{SGO!10@\S~10!1@Abs.~1} andererseits auch zur Verwendung durch eine Rechtsmittelinstanz.
+Darüber hinaus dient die Dokumentation auch dem längerfristigen Nachweis, \S~14 Abs.~5~SGO\indexPar{SGO!14@\S~14!5@Abs.~5}.
 
-In \S~15~SGO\index[paridx]{SGO!15@\S~15} schließlich ist die Rechenschaftslegung nach außen geregelt.
-Die Veröffentlichungsrechte und -pflichten sind die Begrenzung der ansonsten für die Mitglieder von Schiedsgerichten geltenden Verschwiegenheitspflicht (\S~2 Abs.~4~SGO).\index[paridx]{SGO!2@\S~2!4@Abs.~4}\index[idx]{Verschwiegenheitspflicht}
+In \S~15~SGO\indexPar{SGO!15@\S~15} schließlich ist die Rechenschaftslegung nach außen geregelt.
+Die Veröffentlichungsrechte und -pflichten sind die Begrenzung der ansonsten für die Mitglieder von Schiedsgerichten geltenden Verschwiegenheitspflicht (\S~2 Abs.~4~SGO).\indexPar{SGO!2@\S~2!4@Abs.~4}\index[idx]{Verschwiegenheitspflicht}
 Da Dokumentation für den internen Gebrauch und die Rechenschaftslegung zur Veröffentlichung eng miteinander verflochten sind, werden sie hier gemeinsam behandelt.
 
 \section{Verfahrensakte}
 \label{Dokumentation:Akte}
 \index[idx]{Akte!Inhalt}
 \index[idx]{Verfahrensakte|see{Akte}}
-Der Umfang der Verfahrensakte wird von \S~14 Abs.~2~SGO\index[paridx]{SGO!14@\S~14!2@Abs.~2} definiert (\Zitat{Verlaufsprotokolle von Anhörungen und Verhandlungen, alle für das Verfahren relevanten Schriftstücke und das Urteil}).
-Da es sich hierbei ausschließlich um Texte handelt -- von Tonaufzeichnungen sind Protokolle anzufertigen, \S~14 Abs.~3 S.~2~SGO\index[paridx]{SGO!14@\S~14!3@Abs.~3} -- empfiehlt es sich, die verschiedenen Quellen in eine einzelne Datei (bspw.\nomenclature{bspw.}{beispielsweise} im PDF\nomenclature{PDF}{Portable Document Format}) zusammenzufassen.
+Der Umfang der Verfahrensakte wird von \S~14 Abs.~2~SGO\indexPar{SGO!14@\S~14!2@Abs.~2} definiert (\Zitat{Verlaufsprotokolle von Anhörungen und Verhandlungen, alle für das Verfahren relevanten Schriftstücke und das Urteil}).
+Da es sich hierbei ausschließlich um Texte handelt -- von Tonaufzeichnungen sind Protokolle anzufertigen, \S~14 Abs.~3 S.~2~SGO\indexPar{SGO!14@\S~14!3@Abs.~3} -- empfiehlt es sich, die verschiedenen Quellen in eine einzelne Datei (bspw.\nomenclature{bspw.}{beispielsweise} im PDF\nomenclature{PDF}{Portable Document Format}) zusammenzufassen.
 
 Als \enquote{Schriftstücke} i.S.d.\nomenclature{i.S.d.}{im Sinne der/des} \S~14 Abs.~2~SGO sind auch sämtliche Aktennotizen (z.B.\nomenclature{z.B.}{zum Beispiel} zu (fern-) mündlich gestellten Anträgen etc.\nomenclature{etc.}{et cetera} zu verstehen.
 Nicht zur Akte gehören hingegen die Beratungen der Richter:
-Da das Abstimmverhalten nicht mitzuteilen ist, \S~12 Abs.~3 S.~4~SGO\index[paridx]{SGO!12@\S~12!3@Abs.~3} und die Richter allgemein Verschwiegenheit zu wahren haben, \S~2 Abs.~4~SGO,\index[paridx]{SGO!2@\S~2!4@Abs.~4} sind auch Beratungen der Richter untereinander nicht Teil der Akte.
+Da das Abstimmverhalten nicht mitzuteilen ist, \S~12 Abs.~3 S.~4~SGO\indexPar{SGO!12@\S~12!3@Abs.~3} und die Richter allgemein Verschwiegenheit zu wahren haben, \S~2 Abs.~4~SGO,\indexPar{SGO!2@\S~2!4@Abs.~4} sind auch Beratungen der Richter untereinander nicht Teil der Akte.
 Stattdessen umfasst der Begriff der \enquote{relevanten Schriftstücke} (u.a.)\nomenclature{u.a.}{unter anderem} jedweden (Schrift-) Verkehr zwischen Gericht und den Parteien, sowie verfahrensleitende Beschlüsse, dienstliche Stellungnahmen der Richter (bspw. zur Besorgnis der Befangenheit) und die Notizen über Spruchkörperveränderungen.
 
 Die Akte dient dazu, ein Verfahren lückenlos nachvollziehbar zu halten, ohne dabei auf andere Quellen (z.B. Beteiligte und Zeugen) angewiesen zu sein.
@@ -42,15 +42,15 @@ Es reicht nicht aus, dass der zeitliche Zusammenhang aus dem Inhalt der Akte ers
 Stattdessen muss bereits durch die Abfolge der Dokumente in der Akte ersichtlich werden, in welcher Reihenfolge sie bei Gericht eingingen.
 Soweit die Akte aus einzelnen Dateien besteht, empfiehlt sich der Übersicht halber daher die durchgängige Benennung nach eindeutigen Zeitstempeln\footnote{Bspw. im Format \emph{JJJJMMDD}.} als Präfix.
 
-Die Verfahrensakte ist nach Abschluss des Verfahrens 5~Jahre aufzubewahren, \S~14 Abs.~5 S.~1~SGO.\index[paridx]{SGO!14@\S~14!5@Abs.~5}
+Die Verfahrensakte ist nach Abschluss des Verfahrens 5~Jahre aufzubewahren, \S~14 Abs.~5 S.~1~SGO.\indexPar{SGO!14@\S~14!5@Abs.~5}
 Das ist auch elektronisch möglich, bspw. im ohnehin verwendeten Ticket-System oder als konsolidiertes PDF.
 
-Die Akte ist gegen unbefugten Zugriff zu sichern; neben dem jeweils amtierenden Gericht haben nur die jeweiligen Verfahrensparteien das Recht auf Akteneinsicht, \S~14 Abs.~4~SGO.\index[paridx]{SGO!14@\S~14!4@Abs.~4}
+Die Akte ist gegen unbefugten Zugriff zu sichern; neben dem jeweils amtierenden Gericht haben nur die jeweiligen Verfahrensparteien das Recht auf Akteneinsicht, \S~14 Abs.~4~SGO.\indexPar{SGO!14@\S~14!4@Abs.~4}
 Das Recht der Akteneinsicht für Verfahrensparteien ist uneingeschränkt; nur eine unvollständige Akte zur Verfügung zu stellen oder gar Schwärzungen vorzunehmen, ist unzulässig.
 Ebenso endet das Recht auf Akteneinsicht nicht mit dem Ende des Verfahrens.
-Das wird bereits daran deutlich, dass im laufenden Verfahren die Parteien bereits aufgrund von \S~10 Abs.~1 S.~3~SGO\index[paridx]{SGO!10@\S~10!1@Abs.~1} Zugriff auf die Verfahrensakte erhalten.
+Das wird bereits daran deutlich, dass im laufenden Verfahren die Parteien bereits aufgrund von \S~10 Abs.~1 S.~3~SGO\indexPar{SGO!10@\S~10!1@Abs.~1} Zugriff auf die Verfahrensakte erhalten.
 
-Nach Ablauf der Aufbewahrungsfrist ist die Akte (mit Ausnahme des Urteils, \S~14 Abs.~5 S.~2~SGO),\index[paridx]{SGO!14@\S~14!5@Abs.~5} zu vernichten bzw. zu löschen.
+Nach Ablauf der Aufbewahrungsfrist ist die Akte (mit Ausnahme des Urteils, \S~14 Abs.~5 S.~2~SGO),\indexPar{SGO!14@\S~14!5@Abs.~5} zu vernichten bzw. zu löschen.
 
 \section{Protokolle}
 \label{Dokumentation:Protokolle}
@@ -59,7 +59,7 @@ Es kommt darauf an, ob es sich um Protokolle von (fern-) mündlichen Verhandlung
 
 \subsection{Verhandlungsprotokolle}
 \label{Dokumentation:Protokolle:Verhandlungsprotokolle}
-Die Protokolle von Verhandlungen sind Teil der Verfahrensakte, \S~14 Abs.~2~SGO.\index[paridx]{SGO!14@\S~14!2@Abs.~2}
+Die Protokolle von Verhandlungen sind Teil der Verfahrensakte, \S~14 Abs.~2~SGO.\indexPar{SGO!14@\S~14!2@Abs.~2}
 Die SGO sieht dabei explizit \emph{Verlaufsprotokolle} vor:
 Solche sind umfangreicher als bloße \emph{Ergebnisprotokolle}, da sie auch den Inhalt des jeweiligen Vorbringens, d.h. ggf.\nomenclature{ggf.}{gegebenenfalls} auch der rechtlichen Diskussion widergeben.
 Sie sind allerdings weniger umfangreich als \emph{Wortprotokolle} und geben im Gegensatz zu diesen das Vorbringen der Beteiligten nur zusammenfassend und in indirekter Rede wider, anstatt den genauen Wortlaut aufzuführen.
@@ -78,7 +78,7 @@ Die Verschwiegenheitspflicht verbietet eine Protokollierung nicht:
 Es steht dem Gericht im Rahmen seiner inneren Organisationsfreiheit frei, diese Sitzungen nach eigenem Ermessen zu protokollieren.
 Lediglich die Veröffentlichung ist reglementiert.
 
-Hier bietet sich eine Veröffentlichung im Rahmen der regelmäßigen Berichtspflicht des Schiedsgerichts nach \S~15 Abs.~1~SGO\index[paridx]{SGO!15@\S~15!1@Abs.~1} und bzw.\nomenclature{bzw.}{beziehungsweise} oder im Arbeitsbericht an.
+Hier bietet sich eine Veröffentlichung im Rahmen der regelmäßigen Berichtspflicht des Schiedsgerichts nach \S~15 Abs.~1~SGO\indexPar{SGO!15@\S~15!1@Abs.~1} und bzw.\nomenclature{bzw.}{beziehungsweise} oder im Arbeitsbericht an.
 In beiden Fällen sieht die SGO jeweils nur Mindestanforderungen für die Veröffentlichung vor, über die die Schiedsgerichte in gewissem Umfang hinausgehen dürfen.
 
 \section{Beschlüsse}
@@ -99,15 +99,15 @@ Diese lassen sich wiederum untergliedern in rechtsmittelfähige und unanfechtbar
 
 \subsubsection{Rechtsmittelfähige Beschlüsse}
 \label{Dokumentation:Beschlüsse:Verfahrensleitend:Rechtsmittelfähig}
-Gegen einen rechtsmittelfähigen Beschluss können die Beteiligten auch aus dem Verfahren heraus ein Rechtsmittel zur nächsten Instanz erheben (vgl. auch \S~13 Abs.~6~SGO).\index[paridx]{SGO!13@\S~13!6@Abs.~6}
-Der einzige rechtsmittelfähige, aber gleichzeitig nicht auch das Verfahren (zmd. am jeweiligen  Gericht) beendende Beschluss ist der Beschluss, der die Ablehnung eines Richters durch eine Streitpartei für unbegründet erklärt, \S~5 Abs.~6 S.~2, 3~SGO.\index[paridx]{SGO!5@\S~5!6@Abs.~6}
+Gegen einen rechtsmittelfähigen Beschluss können die Beteiligten auch aus dem Verfahren heraus ein Rechtsmittel zur nächsten Instanz erheben (vgl. auch \S~13 Abs.~6~SGO).\indexPar{SGO!13@\S~13!6@Abs.~6}
+Der einzige rechtsmittelfähige, aber gleichzeitig nicht auch das Verfahren (zmd. am jeweiligen  Gericht) beendende Beschluss ist der Beschluss, der die Ablehnung eines Richters durch eine Streitpartei für unbegründet erklärt, \S~5 Abs.~6 S.~2, 3~SGO.\indexPar{SGO!5@\S~5!6@Abs.~6}
 Da das Verfahren am ursprünglichen Gericht weiterläuft und die Entscheidung im Urteil ohnehin im Rahmen der Prozessgeschichte zumindest zu erwähnen ist, kann eine Veröffentlichung hier unterbleiben.
 Zudem besteht für die Beteiligten die Möglichkeit des Rechtsmittelgebrauchs, die ihrerseits eine zu veröffentlichende Entscheidung (dann des Obergerichts) nach sich zöge. 
 
 \subsubsection{Unanfechtbare Beschlüsse}
 \label{Dokumentation:Beschlüsse:Verfahrensleitend:Unanfechtbar}
 \index[idx]{Beschluss!Unanfechtbarkeit}
-Nicht anfechtbar sind bspw. die Eröffnung eines Verfahrens gemäß \SSS~8 Abs.~6 S.~1, 9 Abs.~1 S.~1~SGO,\index[paridx]{SGO!8@\S~8!6@Abs.~6}\index[paridx]{SGO!9@\S~9!1@Abs.~1} der Ausschluss eines Mitglieds des Spruchkörpers wegen der Besorgnis der Befangenheit (\S~5 Abs.~6 S.~1~SGO\index[paridx]{SGO!5@\S~5!6@Abs.~6}), sowie die Anordnungen der Schiedsgerichte zu Fristen, über Beweisanträge (vgl. \S~10 Abs.~1 S.~2~SGO)\index[paridx]{SGO!10@\S~10!2@Abs.~2} und alle sonstigen Beschlüsse, gegen die nicht explizit ein Rechtsmittel vorgesehen ist.\footnote{Vgl. \S~13 Abs.~6~SGO\index[paridx]{SGO!13@\S~13!6@Abs.~6}, ebenso \cite[5]{LSGBB147}.}
+Nicht anfechtbar sind bspw. die Eröffnung eines Verfahrens gemäß \SSS~8 Abs.~6 S.~1, 9 Abs.~1 S.~1~SGO,\indexPar{SGO!8@\S~8!6@Abs.~6}\indexPar{SGO!9@\S~9!1@Abs.~1} der Ausschluss eines Mitglieds des Spruchkörpers wegen der Besorgnis der Befangenheit (\S~5 Abs.~6 S.~1~SGO\indexPar{SGO!5@\S~5!6@Abs.~6}), sowie die Anordnungen der Schiedsgerichte zu Fristen, über Beweisanträge (vgl. \S~10 Abs.~1 S.~2~SGO)\indexPar{SGO!10@\S~10!2@Abs.~2} und alle sonstigen Beschlüsse, gegen die nicht explizit ein Rechtsmittel vorgesehen ist.\footnote{Vgl. \S~13 Abs.~6~SGO\indexPar{SGO!13@\S~13!6@Abs.~6}, ebenso \cite[5]{LSGBB147}.}
 
 Unanfechtbare Beschlüsse dürften in der Regel der Verfahrensakte zuzuordnen sein.
 Eine Veröffentlichung muss daher nicht zwingend erfolgen.
@@ -115,9 +115,9 @@ Allerdings ist ihr Inhalt zuweilen für das Urteil von Bedeutung.
 Insbesondere betrifft das Entscheidungen zur Besetzung (vgl. auch \ref{Zusammensetzung:Spruchkoerper:Befangenheitsbesorgnis}).
 Soweit ein Beschluss gesondert begründet wird, diese Begründung sich aber nicht unbedingt im Urteil wiederfinden soll (bspw. um den Urteilstext nicht unnötig aufzublähen oder zu verkomplizieren), kann es ratsam sein, auch unanfechtbare, verfahrensleitende Beschlüsse zu veröffentlichen.
 
-Soweit eine Veröffentlichung erfolgt, wäre prinzipiell die fünfjährige Aufbewahrungsfrist nach \S~14 Abs.~5 S.~1~SGO\index[paridx]{SGO!14@\S~14!5@Abs.~5} einschlägig.
+Soweit eine Veröffentlichung erfolgt, wäre prinzipiell die fünfjährige Aufbewahrungsfrist nach \S~14 Abs.~5 S.~1~SGO\indexPar{SGO!14@\S~14!5@Abs.~5} einschlägig.
 Allerdings ersetzt eine Veröffentlichung in diesen Fällen häufig die Aufnahme der entsprechenden -- für das Verfahren durchaus bedeutsame -- Tatsachen und Erwägungen.
-Eine unbegrenzte Aufbewahrung entsprechend den Urteilen (\S~14 Abs.~5 S.~2~SGO\index[paridx]{SGO!14@\S~14!5@Abs.~5}) ist dann zulässig, da insbesondere rechtliche Erwägungen für die Parteiöffentlichkeit relevant sind.
+Eine unbegrenzte Aufbewahrung entsprechend den Urteilen (\S~14 Abs.~5 S.~2~SGO\indexPar{SGO!14@\S~14!5@Abs.~5}) ist dann zulässig, da insbesondere rechtliche Erwägungen für die Parteiöffentlichkeit relevant sind.
 
 % Sonderfall Verweisung an den Senat des BSG → oder ist das verfahrensbeendend? Mal BSG-Praxis angucken!
 
@@ -126,33 +126,33 @@ Eine unbegrenzte Aufbewahrung entsprechend den Urteilen (\S~14 Abs.~5 S.~2~SGO\i
 Aus der SGO ergeben sich allerdings eine erhebliche Anzahl an Beschlüssen, die ein Verfahren beenden (können).
 Dies sind:
 \begin{enumerate}
-\item Die Übertragung eines Verfahrens an den Senat des Bundesschiedsgerichts, \S~3 Abs.~11 S.~7~SGO,\index[paridx]{SGO!3@\S~3!11@Abs.~11}
-\item die Verweisung eines Verfahrens wegen Handlungsunfähigkeit des Gerichts, \S~6 Abs.~5~SGO,\index[paridx]{SGO!6@\S~6!5@Abs.~5}
-\item die Übernahme eines Verfahrens durch das Obergericht wegen Verfahrensverzögerung, \S~10 Abs.~9 S.~5~SGO,\index[paridx]{SGO!10@\S~10!9@Abs.~9}
-\item die Ablehnung der Verfahrenseröffnung (Nichteröffnung),\index[idx]{Nichteröffnung} \S~8 Abs.~6~SGO,\index[paridx]{SGO!8@\S~8!6@Abs.~6}
-\item Erlass oder Ablehnung einer einstweiligen Anordnung (da hiermit das Verfahren im einstweiligen Rechtsschutz zunächst beendet wird), \S~11 Abs.~1, 7~SGO.\index[paridx]{SGO!11@\S~11!1@Abs.~1}\index[paridx]{SGO!11@\S~11!7@Abs.~7}
+\item Die Übertragung eines Verfahrens an den Senat des Bundesschiedsgerichts, \S~3 Abs.~11 S.~7~SGO,\indexPar{SGO!3@\S~3!11@Abs.~11}
+\item die Verweisung eines Verfahrens wegen Handlungsunfähigkeit des Gerichts, \S~6 Abs.~5~SGO,\indexPar{SGO!6@\S~6!5@Abs.~5}
+\item die Übernahme eines Verfahrens durch das Obergericht wegen Verfahrensverzögerung, \S~10 Abs.~9 S.~5~SGO,\indexPar{SGO!10@\S~10!9@Abs.~9}
+\item die Ablehnung der Verfahrenseröffnung (Nichteröffnung),\index[idx]{Nichteröffnung} \S~8 Abs.~6~SGO,\indexPar{SGO!8@\S~8!6@Abs.~6}
+\item Erlass oder Ablehnung einer einstweiligen Anordnung (da hiermit das Verfahren im einstweiligen Rechtsschutz zunächst beendet wird), \S~11 Abs.~1, 7~SGO.\indexPar{SGO!11@\S~11!1@Abs.~1}\indexPar{SGO!11@\S~11!7@Abs.~7}
 \end{enumerate}
 
-Es ist naheliegend, diese Beschlüsse aufgrund ihrer verfahrensbeendenden Wirkung wie Urteile zu behandeln und die auf Urteile anzuwendenden Vorschriften ebenfalls (ggf. analog) anzuwenden.\footnote{In Bezug auf einstweilige Anordnungen ist dies bereits durch die SGO vorgeschrieben, \S~11 Abs.~7~SGO.\index[paridx]{SGO!11@\S~11!7@Abs.~7}}
+Es ist naheliegend, diese Beschlüsse aufgrund ihrer verfahrensbeendenden Wirkung wie Urteile zu behandeln und die auf Urteile anzuwendenden Vorschriften ebenfalls (ggf. analog) anzuwenden.\footnote{In Bezug auf einstweilige Anordnungen ist dies bereits durch die SGO vorgeschrieben, \S~11 Abs.~7~SGO.\indexPar{SGO!11@\S~11!7@Abs.~7}}
 
 \section{Urteile}
 \label{Dokumentation:Urteile}
 Der Aufbau der Urteile ist bereits ausführlich behandelt worden (vgl. Kapitel~\ref{Urteilsaufbau} ab S.~\pageref{Urteilsaufbau}).
-Diese Originalfassung muss in Papierform vorliegen (\Zitat{schriftlich}, \Zitat{von allen Richtern unterschrieben}, \S~12 Abs.~7~SGO\index[paridx]{SGO!12@\S~12!7@Abs.~7}) und darf keine Schwärzungen enthalten.
+Diese Originalfassung muss in Papierform vorliegen (\Zitat{schriftlich}, \Zitat{von allen Richtern unterschrieben}, \S~12 Abs.~7~SGO\indexPar{SGO!12@\S~12!7@Abs.~7}) und darf keine Schwärzungen enthalten.
 Für sie gelten daher besondere Aufbewahrungsbestimmungen (vgl.~\ref{Dokumentation:Aufbewahrung}).
 
-Anders verhält es sich mit der für die Veröffentlichung bestimmte (\S~12 Abs.~8~SGO)\index[paridx]{SGO!12@\S~12!8@Abs.~8} Fassung.
+Anders verhält es sich mit der für die Veröffentlichung bestimmte (\S~12 Abs.~8~SGO)\indexPar{SGO!12@\S~12!8@Abs.~8} Fassung.
 Diese Fassung ist einerseits vom Schiedsgericht selbst zu veröffentlichen, andererseits ist eine Kopie dem Bundesschiedsgericht zuzuleiten, \S~12 Abs.~9 S.~1~SGO.
 Die zur Veröffentlichung bzw. zur Weiterleitung an das Bundesschiedsgericht bestimmte Fassung muss in unterschiedlichem Umfang geschwärzt werden.
 
 \subsection{Pseudonymisierung}
 \label{Dokumentation:Urteile:Pseudonymisierung}
 \index[idx]{Pseudonymisierung}
-Ist das Verfahren öffentlich, so wird das Urteil insgesamt veröffentlicht, \S~12 Abs.~8 S.~1~SGO.\index[paridx]{SGO!12@\S~12!8@Abs.~8}
+Ist das Verfahren öffentlich, so wird das Urteil insgesamt veröffentlicht, \S~12 Abs.~8 S.~1~SGO.\indexPar{SGO!12@\S~12!8@Abs.~8}
 Zum Schutz der Persönlichkeitsrechte aller Beteiligten soll allerdings der Rückschluss auf ihre Identität erschwert werden.
 Daher sind ihre Namen zu pseudonymisieren.
 
-Pseudonymisieren ist das Ersetzen des Namens und anderer Identifikationsmerkmale durch ein Kennzeichen zu dem Zweck, die Bestimmung des Betroffenen auszuschließen oder wesentlich zu erschweren (\S~3 Abs.~6a~BDSG).\index[paridx]{BDSG!3@\S~3!6a@Abs.~6a}\nomenclature{BDSG}{Bundesdatenschutzgesetz}
+Pseudonymisieren ist das Ersetzen des Namens und anderer Identifikationsmerkmale durch ein Kennzeichen zu dem Zweck, die Bestimmung des Betroffenen auszuschließen oder wesentlich zu erschweren (\S~3 Abs.~6a~BDSG).\indexPar{BDSG!3@\S~3!6a@Abs.~6a}\nomenclature{BDSG}{Bundesdatenschutzgesetz}
 Zu beachten ist, dass laut Satzung eine Pflicht zur Pseudonymisierung lediglich für die Namen besteht.
 Davon sind zwar auch sämtliche Arten Nicknames umfasst, aber eben -- im Gegensatz zur Definition aus dem BDSG -- keine sonstigen Merkmale der Person.
 Die Bestimmung der Identität der Beteiligten soll also erschwert werden; verpflichtet, sie tatsächlich unmöglich zu machen, ist das Schiedsgericht nicht.
@@ -160,7 +160,7 @@ Im Interesse der Beteiligten können aber auch andere Merkmale, die zur einfache
 Insbesondere gilt dies für Anschrift und Kontaktdaten von Individuen, die zwar nicht von Satzung wegen, aber aus Gründen des Datenschutzes zu schwärzen sind.
 Aus der Praxis der Schiedsgerichte hat sich ergeben, dass sie gleich dem Namen zu behandeln sind. 
 
-Ausdrücklich ausgenommen von der Pseudonymisierungspflicht sind gemäß \S~12 Abs.~8 S.~2~SGO\index[paridx]{SGO!12@\S~12!8Abs.~8} lediglich die Namen von Gliederungen und die Namen der Richter in ihrer Funktion.
+Ausdrücklich ausgenommen von der Pseudonymisierungspflicht sind gemäß \S~12 Abs.~8 S.~2~SGO\indexPar{SGO!12@\S~12!8@Abs.~8} lediglich die Namen von Gliederungen und die Namen der Richter in ihrer Funktion.
 Es soll also aus den Urteilen auch für die Öffentlichkeit stets hervorgehen, welche Gliederung in welcher Weise beteiligt war.
 Auch die Bezeichnung von Organen (z.B. Vorstand, Kreisparteitag, etc.) darf nicht geschwärzt werden, da es sich hierbei nicht um Personen, sondern eben um Organe handelt.
 Soweit aber Personen für die Gliederungen (oder deren Organe) handeln, sind diese wiederum zu pseudonymisieren -- selbst wenn sie in Funktion (bspw. als Vorstand oder als Prozessvertretung) handeln.
@@ -178,15 +178,15 @@ Eine bloße Abkürzung von Namen auf den ersten Buchstaben hingegen sollte unter
 \subsection{Nichtöffentliche Verfahren}
 \label{Dokumentation:Urteile:Nichtöffentlich}
 \index[idx]{Verschlusssachen}
-Ist das Verfahren nichtöffentlich, so wird lediglich der Tenor veröffentlicht, \S~12 Abs.~8 S.~3~SGO.\index[paridx]{SGO!12@\S~12!8@Abs.~8}
-Die Bestimmung ist -- auch in Ansehung der Formulierung des \S~12 Abs.~3 S.~1~SGO\index[paridx]{SGO!12@\S~12!Abs.~3} -- dergestalt auszulegen, dass das Rubrum zum \enquote{Tenor} gehört (vgl.~\ref{Urteilsaufbau:Rubrum}~f.).\index[idx]{Tenor}
+Ist das Verfahren nichtöffentlich, so wird lediglich der Tenor veröffentlicht, \S~12 Abs.~8 S.~3~SGO.\indexPar{SGO!12@\S~12!8@Abs.~8}
+Die Bestimmung ist -- auch in Ansehung der Formulierung des \S~12 Abs.~3 S.~1~SGO\indexPar{SGO!12@\S~12!Abs.~3} -- dergestalt auszulegen, dass das Rubrum zum \enquote{Tenor} gehört (vgl.~\ref{Urteilsaufbau:Rubrum}~f.).\index[idx]{Tenor}
 
 Effektiv wird das Urteil wie ein Urteil eines öffentlichen Verfahrens geschwärzt bzw. pseudonymisiert (s.o. \ref{Dokumentation:Urteile:Pseudonymisierung}), allerdings vor Schilderung des Sachverhalts und der Entscheidungsgründe \enquote{abgeschnitten}.
 
 Diese Bestimmung dient dem Schutz der Persönlichkeitsrechte des \enquote{disziplinierten} Mitglieds.
 Sie birgt allerdings das Problem, dass in der Praxis nur ein kleiner Teil der (Individual-) Ordnungsmaßnahmen veröffentlicht werden:
-Der Beschluss zum Nichtöffentlichen Verfahren ist in diesen Fällen eine gebundene Entscheidung, \S~10 Abs.~7 S.~2~SGO.\index[paridx]{SGO!10@\S~10!7@Abs.~7}
-Insbesondere, da auf diese Möglichkeit im Eröffnungsbeschluss hinzuweisen ist, \S~9 Abs.~4 S.~1~SGO,\index[paridx]{SGO!9@\S~9!4@Abs.~4} sind viele Ordnungsmaßnahmeverfahren nichtöffentlich.
+Der Beschluss zum Nichtöffentlichen Verfahren ist in diesen Fällen eine gebundene Entscheidung, \S~10 Abs.~7 S.~2~SGO.\indexPar{SGO!10@\S~10!7@Abs.~7}
+Insbesondere, da auf diese Möglichkeit im Eröffnungsbeschluss hinzuweisen ist, \S~9 Abs.~4 S.~1~SGO,\indexPar{SGO!9@\S~9!4@Abs.~4} sind viele Ordnungsmaßnahmeverfahren nichtöffentlich.
 Für die Parteiöffentlichkeit, insbesondere aber auch Vorstände niedrigerer Untergliederungen mit geringerem Aufkommen an Ordnungsmaßnahmen und auch ortsfremde Schiedsgerichte besteht daher das Problem, dass insbesondere bestätigte Ordnungsmaßnahmen und erfolgreiche Anträge auf Parteiausschlussverfahren inhaltlich nicht nachvollziehbar sind.
 Dies erschwert die Etablierung von Beurteilungsmaßstäben, welches Verhalten disziplinarwürdig ist, und welches nicht.
 
@@ -200,9 +200,9 @@ Ausnahmen hiervon sind vor allem die Bekanntmachung von Beeinflussungsversuchen,
 \subsection{Bekanntmachung von Beeinflussungsversuchen}
 \label{Dokumentation:Veröffentlichungen:Beeinflussungen}
 \index[idx]{Beeinflussungsversuch}
-Gemäß \S~2 Abs.~5~SGO\index[paridx]{SGO!2@\S~2!5@Abs.~5} sind die Schiedsgerichte verpflichtet, Versuche der Beeinflussung eines Verfahrens öffentlich bekannt zu machen.
+Gemäß \S~2 Abs.~5~SGO\indexPar{SGO!2@\S~2!5@Abs.~5} sind die Schiedsgerichte verpflichtet, Versuche der Beeinflussung eines Verfahrens öffentlich bekannt zu machen.
 Was eine Beeinflussung ist, liegt letztlich im Ermessen des Schiedsgerichts.
-Insbesondere der Versuch, dem Schiedsgericht Weisungen zu erteilen (im Innenverhältnis der Partei durch \S~2 Abs.~2~SGO,\index[paridx]{SGO!2@\S~2!2@Abs.~2} im Außenverhältnis durch \S~14 Abs.~2 S.~4~PartG\index[paridx]{PartG!14@\S~14!2@Abs.~2} verboten) stellt eine solche veröffentlichungspflichtige Tatsache dar.
+Insbesondere der Versuch, dem Schiedsgericht Weisungen zu erteilen (im Innenverhältnis der Partei durch \S~2 Abs.~2~SGO,\indexPar{SGO!2@\S~2!2@Abs.~2} im Außenverhältnis durch \S~14 Abs.~2 S.~4~PartG\indexPar{PartG!14@\S~14!2@Abs.~2} verboten) stellt eine solche veröffentlichungspflichtige Tatsache dar.
 Obwohl der Wortlaut nahelegt, dass sich die Vorschrift ausschließlich auf die Beeinflussung von bestimmten Verfahren bezieht, ist aufgrund der besonderen (auch gesetzlich geschützten) Bedeutung der Unabhängigkeit der Schiedsgerichte anzunehmen, dass sich die Norm auf jedwede Beeinflussung des Organs Schiedsgericht oder der Richter in ihrer Funktion bezieht.
 Es ist dabei prinzipiell nicht maßgeblich, ob die Quelle der Beeinflussung inner- oder außerhalb der Partei liegt.
 
@@ -218,8 +218,8 @@ Zum Schutze der Persönlichkeitsrechte der Beteiligten sollte eine angemessene P
 \subsection{Stellungnahmen zu laufenden Verfahren}
 \label{Dokumentation:Veröffentlichungen:Stellungnahmen}
 \index[idx]{Stellungnahme}
-Das Gericht kann zu laufenden Verfahren öffentliche Stellungnahmen abgeben, \S~15 Abs.~2 S.~1~SGO.\index[paridx]{SGO!15@\S~15!2@Abs.~2}
-Voraussetzung dafür ist, dass das Verfahren öffentlich ist (\S~15 Abs.2 S.~2~SGO)\index[paridx]{SGO!15@\S~15!2@Abs.~2} und dass das Schiedsgericht ein erhebliches parteiöffentliches Interesse feststellt.
+Das Gericht kann zu laufenden Verfahren öffentliche Stellungnahmen abgeben, \S~15 Abs.~2 S.~1~SGO.\indexPar{SGO!15@\S~15!2@Abs.~2}
+Voraussetzung dafür ist, dass das Verfahren öffentlich ist (\S~15 Abs.2 S.~2~SGO)\indexPar{SGO!15@\S~15!2@Abs.~2} und dass das Schiedsgericht ein erhebliches parteiöffentliches Interesse feststellt.
 
 Die \emph{Parteiöffentlichkeit}\index[idx]{Parteiöffentlichkeit} beschreibt den öffentlichen Raum, den die Mitglieder der Partei gemeinsam bilden.
 Für ein \enquote{parteiöffentliches Interesse} sind Umstände außerhalb der Piratenpartei also nicht von Belang.
@@ -241,13 +241,13 @@ Zu beachten ist:
 Das Urteil darf in solchen, nachträglichen Veröffentlichungen, nicht berührt werden.
 
 Bezüglich der Dokumentation und Aufbewahrung bietet sich eine Behandlung entsprechend der Bekanntmachungen von Beeinflussungsversuchen an:
-Stellungnahmen sind als \enquote{relevantes Schriftstück} i.S.d. \S~14 Abs.~2~SGO\index[paridx]{SGO!14@\S~14!2@Abs.~2} zugleich Teil der Verfahrensakte.\index[idx]{Akte!Inhalt}
+Stellungnahmen sind als \enquote{relevantes Schriftstück} i.S.d. \S~14 Abs.~2~SGO\indexPar{SGO!14@\S~14!2@Abs.~2} zugleich Teil der Verfahrensakte.\index[idx]{Akte!Inhalt}
 Während der Aufbewahrungsfrist bietet sich daher eine Aufbewahrung mit der Verfahrensakte an.
 Da die Stellungnahme aber auch veröffentlicht wurde, sollte sie unbegrenzt verfügbar gehalten werden; ein Interesse an einer Depublizierung ist der SGO nicht zu entnehmen.
 
 \section{Aufbewahrung der Akten}
 \label{Dokumentation:Aufbewahrung}
-Die Aufbewahrung der Akten bestimmt sich nach der Geschäftsordnung des Schiedsgerichts, \S~2 Abs.~6 S.~2~SGO.\index[paridx]{SGO!2@\S~2!6@Abs.~6}
+Die Aufbewahrung der Akten bestimmt sich nach der Geschäftsordnung des Schiedsgerichts, \S~2 Abs.~6 S.~2~SGO.\indexPar{SGO!2@\S~2!6@Abs.~6}
 Sie sollte möglichst zweckmäßig erfolgen.
 Eine zentrale, elektronische Verwaltung, auf die das gesamte Gericht zugreifen kann, ist daher sinnvoll.
 Hinsichtlich der Erstellung von Backups etc. ist ein Austausch mit den Technikverantwortlichen der Gliederung empfehlenswert.
@@ -275,11 +275,11 @@ Hierfür bietet sich eine gegen unbefugten Zugriff gesicherte Aufbewahrung in de
 Zweckmäßig ist dann die Aufbewahrung im verschlossenen Umschlag mit außen angebrachtem Verfallsdatum.
 
 Soweit es während des Verfahrens mehrere Speicherorte für die Akte gab (bspw. jeweils bei den mit dem Verfahren befassten Mitgliedern des Spruchkörpers), sollten diese nach Verfahrensabschluss auf ein einzelnes Archiv der Akte reduziert werden.
-Nach Ablauf der fünfjährigen Aufbewahrungsfrist (\S~14 Abs.~5~SGO)\index[paridx]{SGO!14@\S~14!5@Abs.~5} ist die Akte an all ihren Speicherorten zu vernichten.
+Nach Ablauf der fünfjährigen Aufbewahrungsfrist (\S~14 Abs.~5~SGO)\indexPar{SGO!14@\S~14!5@Abs.~5} ist die Akte an all ihren Speicherorten zu vernichten.
 
 \subsubsection{Urteile}
-Urteile sind unbefristet aufzubewahren, \S~14 Abs.~5 S.~2~SGO.\index[paridx]{SGO!14@\S~14!5@Abs.~5}
-Dies bezieht sich insbesondere auf die schriftliche, von allen (am Verfahren beteiligten) Richtern unterschriebene Originalfassung nach \S~12 Abs.~7~SGO.\index[paridx]{SGO!12@\S~12!7@Abs.~7}
+Urteile sind unbefristet aufzubewahren, \S~14 Abs.~5 S.~2~SGO.\indexPar{SGO!14@\S~14!5@Abs.~5}
+Dies bezieht sich insbesondere auf die schriftliche, von allen (am Verfahren beteiligten) Richtern unterschriebene Originalfassung nach \S~12 Abs.~7~SGO.\indexPar{SGO!12@\S~12!7@Abs.~7}
 Diese sollten zentral, bspw. in der Geschäftsstelle der Gliederung, aufbewahrt werden.
 Sie müssen gegen den Zugriff Unbefugter gesichert sein (bspw. Verschluss in einem Schrank o.ä.\nomenclature{o.ä.}{oder ähnliche(r/s)}).
 
@@ -292,7 +292,7 @@ Die Aufbewahrung sonstiger Akten liegt im Ermessen des Gerichts.
 Sie regelt sich nach der Geschäftsordnung oder aber der im Gericht gängigen Praxis.
 Es gelten lediglich die allgemein üblichen Vorschriften (Datenschutz etc.).
 
-Auch der Zugang zu sonstigen Akten des Gerichts ist grundsätzlich zu beschränken, da sie von der Verschwiegenheitspflicht aus \S~2 Abs.~4~SGO\index[paridx]{SGO!2@\S~2!4@Abs.~4} umfasst sind.
+Auch der Zugang zu sonstigen Akten des Gerichts ist grundsätzlich zu beschränken, da sie von der Verschwiegenheitspflicht aus \S~2 Abs.~4~SGO\indexPar{SGO!2@\S~2!4@Abs.~4} umfasst sind.
 Ausnahmen hiervon sind möglich.
 Als Faustformel kann gelten:
 \Zitat{Was veröffentlicht ist, bleibt veröffentlicht.}
@@ -305,8 +305,8 @@ Es unterliegt dabei einerseits einer laufenden Berichts- und Veröffentlichungsp
 
 \subsection{Laufende Berichtspflicht}
 \label{Dokumentation:Rechenschaftslegung:Laufend}
-Das Gericht soll während der Amtszeit regelmäßig berichten; gemäß \S~15 Abs.~1~SGO\index[paridx]{SGO!15@\S~15!1@Abs.~1} insbesondere über die Zahl der Fälle.
-Allerdings hat das Gericht auch Urteile zu veröffentlichen, \S~12 Abs.~8 S.~1~SGO.\index[paridx]{SGO!12@\S~12!8@Abs.~8}
+Das Gericht soll während der Amtszeit regelmäßig berichten; gemäß \S~15 Abs.~1~SGO\indexPar{SGO!15@\S~15!1@Abs.~1} insbesondere über die Zahl der Fälle.
+Allerdings hat das Gericht auch Urteile zu veröffentlichen, \S~12 Abs.~8 S.~1~SGO.\indexPar{SGO!12@\S~12!8@Abs.~8}
 Als Praxis aller Schiedsgerichte hat sich daher eingebürgert, dieser Berichtspflicht durch die Führung eines regelmäßig aktualisierten, öffentlichen Verfahrensverzeichnisses nachzukommen.
 Diese sind häufig im Wiki der jeweiligen Gliederung angelegt.
 
@@ -336,7 +336,7 @@ Der Arbeitsbericht des Schiedsgerichts wird dem Parteitag vorgelegt, der es (neu
 \subsubsection{Inhalt}
 \label{Dokumentation:Rechenschaftslegung:Arbeitsbericht:Inhalt}
 An den Inhalt dieses Arbeitsberichts stellt die SGO höhere Anforderungen:
-Gemäß \S~15 Abs.~3~SGO\index[paridx]{SGO!15@\S~15!3@Abs.~3} soll er die Fälle der Amtsperiode inklusive der jeweiligen Urteile kurz darstellen.
+Gemäß \S~15 Abs.~3~SGO\indexPar{SGO!15@\S~15!3@Abs.~3} soll er die Fälle der Amtsperiode inklusive der jeweiligen Urteile kurz darstellen.
 Das trifft den Umfang, der sich bei der laufenden Rechenschaftslegung (s.o.~\ref{Dokumentation:Rechenschaftslegung:Laufend}) als gängige Praxis eingestellt hat.
 Der dort genannte Umfang ist deswegen nicht nur legitimiert (da die entsprechenden Daten ohnehin veröffentlicht würden); die Erstellung des Arbeitsberichts verläuft so \enquote{nebenbei} über die gesamte Amtszeit und wird dadurch erleichtert.
 Wird der laufenden Berichtspflicht im bereits geschilderten Umfang gefolgt, so können die Fälle der Amtszeit aus der laufend aktualisierten Übersicht in den Arbeitsbericht einfach übertragen werden.
@@ -356,9 +356,9 @@ Verfügt das Schiedsgericht über ein eigenes Budget, ist eine Rechenschaftslegu
 \label{Dokumentation:Rechenschaftslegung:Arbeitsbericht:nichtöffentlicheVerfahren}
 \index[idx]{Verschlusssachen}
 Schließlich bietet der Arbeitsbericht die Möglichkeit, dem Problem der nicht-öffentlichen Rechtsprechung Herr zu werden (s.o.~\ref{Dokumentation:Urteile:Nichtöffentlich}).
-Zwar sind nichtöffentliche Verfahren auch vom Gericht vertraulich zu behandeln, \S~9 Abs.~4 S.~2~SGO.\index[paridx]{SGO!9@\S~9!4@Abs.~4}
-Das Urteil darf nur eingeschränkt veröffentlicht werden, \S~12 Abs.~8 S.~4~SGO,\index[paridx]{SGO!12@\S~12!8@Abs.~8} und öffentliche Stellungnahmen sind vollständig unzulässig, \S~15 Abs.~2 S.~2~SGO.\index[paridx]{SGO!15@\S~15!2@Abs.~2}
-Demgegenüber sollen aber alle Fälle der Amtsperiode im Arbeitsbericht kurz dargestellt werden, \S~15 Abs.~3~SGO.\index[paridx]{SGO!15@\S~15!3@Abs.~3}
+Zwar sind nichtöffentliche Verfahren auch vom Gericht vertraulich zu behandeln, \S~9 Abs.~4 S.~2~SGO.\indexPar{SGO!9@\S~9!4@Abs.~4}
+Das Urteil darf nur eingeschränkt veröffentlicht werden, \S~12 Abs.~8 S.~4~SGO,\indexPar{SGO!12@\S~12!8@Abs.~8} und öffentliche Stellungnahmen sind vollständig unzulässig, \S~15 Abs.~2 S.~2~SGO.\indexPar{SGO!15@\S~15!2@Abs.~2}
+Demgegenüber sollen aber alle Fälle der Amtsperiode im Arbeitsbericht kurz dargestellt werden, \S~15 Abs.~3~SGO.\indexPar{SGO!15@\S~15!3@Abs.~3}
 
 Die Lösung besteht in der Führung einer eigenen Rubrik für nichtöffentliche Verfahren im Arbeitsbericht, die lediglich rechtliche Erwägungen ohne nachvollziehbaren Bezug zu einem einzelnen Verfahren enthält.
 Im Stile von \enquote{Leitsätzen}\index[idx]{Leitsatz} können hier die Kerninhalte der Rechtsprechung nichtöffentlicher Verfahren zusammenfassend veröffentlicht werden.
