--- a/Einleitung.tex
+++ b/Einleitung.tex
@@ -2,9 +2,9 @@
 \chapterpreamble{Ein Schiedsgerichtshandbuch ist geeignet, erforderlich und auch angemessen, die Qualität der Rechtsprechung innerhalb der Parteigerichte der Piratenpartei zu verbessern.}
 
 \chapter{Einleitung}
-Schon die Verfassung gibt den politischen Parteien in Art.~21\index[paridx]{GG!21@Art.~21} eine ganz besondere Stellung.
-\Zitat{Ihre Gründung ist frei} heißt es dort in Absatz~1 Satz~2\index[paridx]{GG!21@Art.~21!1@Abs.~1}.
-Doch nicht nur die Gründung der Parteien ist frei, auch die innere Struktur ist ihnen --- unter Beachtung gewisser demokratischer Mindeststandards gemäß Art.~21 Abs.~1 Satz~3 GG\index[paridx]{GG!21@Art.~21!1@Abs.~1} --- selbst überlassen.
+Schon die Verfassung gibt den politischen Parteien in Art.~21\indexPar{GG!21@Art.~21} eine ganz besondere Stellung.
+\Zitat{Ihre Gründung ist frei} heißt es dort in Absatz~1 Satz~2\indexPar{GG!21@Art.~21!1@Abs.~1}.
+Doch nicht nur die Gründung der Parteien ist frei, auch die innere Struktur ist ihnen --- unter Beachtung gewisser demokratischer Mindeststandards gemäß Art.~21 Abs.~1 Satz~3 GG\indexPar{GG!21@Art.~21!1@Abs.~1} --- selbst überlassen.
 Sie sollen unabhängig sein von staatlichem Einfluss.
 
 Das hat einen ganz einfachen Grund:
@@ -17,7 +17,7 @@ Das war selbst dem Gesetzgeber bewusst.
 Um die \emph{Staatsferne der Parteien} zu sichern und die eigenen staatlichen Gerichte nicht mit den parteiinternen Streitigkeiten zu belasten, wurde das Institut der Parteischiedsgerichtsbarkeit geschaffen.
 Parteischiedsgerichte handeln dabei nach ihrer von ihrer eigenen Partei erlassenen Verfahrensordnung.
 
-Auch wenn der Gesetzgeber im Wissen um die ehrenamtliche Besetzung der Schiedsgerichte mitunter mit Laien und nicht berufserfahrenen Richtern den Parteischiedsgerichten nicht die gänzliche Komplexität der großen Prozessordnungen aufbürdet, so müssen sie doch die allgemeinen Grundsätze eines gerechten Gerichtsverfahrens einhalten (vgl. \S~14 Abs.~4 PartG)\index[paridx]{PartG!14@\S~14!4@Abs.~4} und sich strikt an die von der eigenen Partei erlassene Prozessordnung halten.
+Auch wenn der Gesetzgeber im Wissen um die ehrenamtliche Besetzung der Schiedsgerichte mitunter mit Laien und nicht berufserfahrenen Richtern den Parteischiedsgerichten nicht die gänzliche Komplexität der großen Prozessordnungen aufbürdet, so müssen sie doch die allgemeinen Grundsätze eines gerechten Gerichtsverfahrens einhalten (vgl. \S~14 Abs.~4 PartG)\indexPar{PartG!14@\S~14!4@Abs.~4} und sich strikt an die von der eigenen Partei erlassene Prozessordnung halten.
 
 Da gerade in der Piratenpartei oft Unerfahrene und Laien die Richterämter übernehmen, haben wir dieses Handbuch verfasst, um all denen einen Leitfaden an die Hand zu geben, die sich in dieses Amt einarbeiten wollen.
 Auch erfahrenen Richtern wird hier eine Übersicht über Regelungen der Schiedsgerichtsordnung und der zugehörigen Rechtsprechung an die Hand gegeben.
