--- a/Normenauslegung.tex
+++ b/Normenauslegung.tex
@@ -1,5 +1,5 @@
 %\begin{refsection}
-\chapterpreamble{\Zitat{Verträge sind so auszulegen, wie Treu und Glauben mit Rücksicht auf die Verkehrssitte es erfordern.} – \S~157~BGB\nomenclature{BGB}{Bürgerliches Gesetzbuch}\index[paridx]{BGB!157@\S~157}}
+\chapterpreamble{\Zitat{Verträge sind so auszulegen, wie Treu und Glauben mit Rücksicht auf die Verkehrssitte es erfordern.} – \S~157~BGB\nomenclature{BGB}{Bürgerliches Gesetzbuch}\indexPar{BGB!157@\S~157}}
 
 \chapter{Grundlagen der Normenauslegung}
 % Ein paar einleitende, warme Worte.(?)
@@ -35,10 +35,10 @@ Teilweise bietet es sich an, Sätze als Halbsätze, Alternativen oder Varianten 
 Da der Paragraph (Artikel) die wichtigste Gliederungsebene ist, ist er der Ausgangspunkt eines jeden Normzitats.
 Von ihm ausgehend wird \enquote{nach unten}, d.h. nach Absätzen, Sätzen, Nummern usw. zitiert.
 Je genauer der betreffende Abschnitt durch das Zitat benannt wird, desto leichter lässt er sich durch den Leser wiederfinden – es gilt: \Zitat{Viel hilft viel}!
-Erst am Ende wird das jeweilige Regelwerk benannt, dem der Paragraph entstammt.\footnote{Das \enquote{Quellregelwerk} erst am Ende zu benennen, mag der Ordnung des Zitats – \Zitat{vom Großen ins Kleine} – widersprechen, findet jedoch im juristischen Gebrauch absolute Verbreitung. Explizit vorgegeben ist diese Ordnung z.B. in \S~260 Abs.~5 S.~1~StPO.\index[paridx]{StPO!260@\S~260!5@Abs.~5}}
+Erst am Ende wird das jeweilige Regelwerk benannt, dem der Paragraph entstammt.\footnote{Das \enquote{Quellregelwerk} erst am Ende zu benennen, mag der Ordnung des Zitats – \Zitat{vom Großen ins Kleine} – widersprechen, findet jedoch im juristischen Gebrauch absolute Verbreitung. Explizit vorgegeben ist diese Ordnung z.B. in \S~260 Abs.~5 S.~1~StPO.\indexPar{StPO!260@\S~260!5@Abs.~5}}
 Die Gliederungsebenen zwischen der Ebene \enquote{Regelwerk} und der Ebene \enquote{Paragraph} werden nicht mitzitiert, da sie lediglich der systematischen Übersicht dienen; die Nennung von Regelwerk und nummeriertem Paragraphen reicht zur Auffindung bereits aus.\footnote{Es gibt daher auch keine vereinheitlichen Regeln über Verwendung oder gar Rangfolge dieser reinen \enquote{Gliederungsebenen}; sie können vom jeweiligen Gesetz- bzw. Satzungsgeber völlig frei verwendet werden.}
 
-\textbf{Beispiel:} \S~9a Abs.~9 S.~2 Hs.~2~BS\nomenclature{Abs.}{Absatz}\nomenclature{S.}{Satz}\nomenclature{Hs.}{Halbsatz}\index[paridx]{BS!9@\S~9a!9@Abs.~9} (Paragraph~9a Absatz~9 Satz~2 Halbsatz~2 der Bundessatzung) schreibt vor, dass jedes Bundesvorstandsmitglied bei der Abfassung des Tätigkeitsberichts die Verantwortung für seine eigenen Tätigkeitsbereiche trägt. 
+\textbf{Beispiel:} \S~9a Abs.~9 S.~2 Hs.~2~BS\nomenclature{Abs.}{Absatz}\nomenclature{S.}{Satz}\nomenclature{Hs.}{Halbsatz}\indexPar{BS!9@\S~9a!9@Abs.~9} (Paragraph~9a Absatz~9 Satz~2 Halbsatz~2 der Bundessatzung) schreibt vor, dass jedes Bundesvorstandsmitglied bei der Abfassung des Tätigkeitsberichts die Verantwortung für seine eigenen Tätigkeitsbereiche trägt. 
 
 \subsection{Tatbestände und Rechtsfolgen}
 \index[idx]{Rechtsnorm!Aufbau}
@@ -52,8 +52,8 @@ Die Rechtsfolgen sind die Handlungsanweisungen (s.o.), die sich ergeben, wenn ei
 Zuweilen führen mehrere Tatbestände zur selben Rechtsfolge, ebenso können an einen Tatbestand mehrere Rechtsfolgen geknüpft werden (in dieser Konstellation oft mit einer Auswahl durch die Rechtsanwenderin oder den Rechtsanwender).
 In einem Satz können sich dadurch durchaus mehrere Rechtssätze verbergen.
 
-\textbf{Beispiel:} \S~6 Abs.~1 S.~1~BS\index[paridx]{BS!6@\S~6!1@Abs.~1} (\Zitat{Verstößt ein Pirat gegen die Satzung oder gegen Grundsätze oder Ordnung der Piratenpartei Deutschland und fügt Ihr damit Schaden zu, so kann der Bundesvorstand folgende Ordnungsmaßnahmen anordnen: Verwarnung, Verweis, Enthebung von einem Parteiamt, Aberkennung der Fähigkeit ein Parteiamt zu bekleiden, Ausschluss aus der Piratenpartei Deutschland.} enthält insg. 15 Rechtssätze:
-An die drei Tatbestände Satzungsverstoß, Grundsatzverstoß oder Ordnungsverstoß können nach Auswahl des Bundesvorstands jeweils fünf Rechtsfolgen (Verwarnung, Verweis, Enthebung, Wählbarkeitsverlust, Ausschlussantrag beim Schiedsgericht)\footnote{Vgl. \S~6 Abs.~2~BS,\index[paridx]{BS!6@\S~6!2@Abs.~2} ebenso \S~10 Abs.~5 S.~1~PartG.\nomenclature{PartG}{Gesetz über die politischen Parteien (Parteiengesetz)}\index[paridx]{PartG!10@\S~10!5@Abs.~5}} geknüpft werden.
+\textbf{Beispiel:} \S~6 Abs.~1 S.~1~BS\indexPar{BS!6@\S~6!1@Abs.~1} (\Zitat{Verstößt ein Pirat gegen die Satzung oder gegen Grundsätze oder Ordnung der Piratenpartei Deutschland und fügt Ihr damit Schaden zu, so kann der Bundesvorstand folgende Ordnungsmaßnahmen anordnen: Verwarnung, Verweis, Enthebung von einem Parteiamt, Aberkennung der Fähigkeit ein Parteiamt zu bekleiden, Ausschluss aus der Piratenpartei Deutschland.} enthält insg. 15 Rechtssätze:
+An die drei Tatbestände Satzungsverstoß, Grundsatzverstoß oder Ordnungsverstoß können nach Auswahl des Bundesvorstands jeweils fünf Rechtsfolgen (Verwarnung, Verweis, Enthebung, Wählbarkeitsverlust, Ausschlussantrag beim Schiedsgericht)\footnote{Vgl. \S~6 Abs.~2~BS,\indexPar{BS!6@\S~6!2@Abs.~2} ebenso \S~10 Abs.~5 S.~1~PartG.\nomenclature{PartG}{Gesetz über die politischen Parteien (Parteiengesetz)}\indexPar{PartG!10@\S~10!5@Abs.~5}} geknüpft werden.
 
 %\subsection{Verweisungen}
 
@@ -61,9 +61,9 @@ An die drei Tatbestände Satzungsverstoß, Grundsatzverstoß oder Ordnungsversto
 \index[idx]{Subsumtion}
 Juristerei ist der Streit um Begrifflichkeiten.
 Aus der Frage, ob ein bestimmter, realer Sachverhalt unter einen juristischen Begriff zu fassen (\emph{subsumieren}, von lat. \emph{sub-sumere} – „darunter fassen“) ist, oder nicht, leitet sich letztlich die Anwendung eines Rechtssatzes ab:
-\S~14~BS\index[paridx]{BS!14@\S~14} bspw. schreibt vor, dass \emph{\enquote{Die Satzungen der Landesverbände und ihrer Untergliederungen […] mit den grundsätzlichen Regelungen dieser Satzung übereinstimmen}} müssen.
+\S~14~BS\indexPar{BS!14@\S~14} bspw. schreibt vor, dass \emph{\enquote{Die Satzungen der Landesverbände und ihrer Untergliederungen […] mit den grundsätzlichen Regelungen dieser Satzung übereinstimmen}} müssen.
 Nur wenn klar ist, ob eine Regelung der Bundessatzung eine \enquote{grundsätzliche Regel}\index[idx]{Satzungsregel!grundsätzliche} ist, oder nicht, ist klar, ob eine Landessatzung davon abweichen darf, oder nicht.
-Da \S~14~BS\index[paridx]{BS!14@\S~14} die grundsätzlichen Regeln nicht selbst nennt, müssen sie erst ermittelt werden.
+Da \S~14~BS\indexPar{BS!14@\S~14} die grundsätzlichen Regeln nicht selbst nennt, müssen sie erst ermittelt werden.
 Möglich wäre hier, die Aufzählung selbst vorzunehmen, d.h. alle grundsätzlichen Regeln herauszufinden.
 Das aber ist zeitaufwändig und regelmäßig zu umfangreich, da ja nur die Frage zu klären ist, ob eine bestimmte Regel der Satzung eine grundsätzliche Regel ist und daher alle anderen Regeln außer Betracht bleiben können.
 Sinnvoller ist, für den Begriff der \enquote{grundsätzlichen Regel} einen anderen Begriff zu finden, der diesen anhand von prüfbaren Merkmalen beschreibt.
@@ -165,7 +165,7 @@ Ebenso ist eine Änderung, die dazu führte, dass ein einstmals eindeutig erfass
 
 Für die Satzungen privatrechtlicher Organisationen (so auch Parteien) gilt jedoch allgemein, dass ihre Satzungen aus sich heraus verständlich sein sollen.
 Weder soll Recherche zu (ohnehin selten in der notwendigen Ausführlichkeit bestehenden) Protokollen, noch zu alten Fassungen der Satzung notwendig sein.
-Mit der \enquote{Vertragstheorie}, die davon ausgeht, dass die Satzung als Grundlagendokument einer privatrechtlichen Vereinigung letztlich ein privatrechtlicher Vertrag ist, der ein \enquote{Eigenleben} entwickelt hat, kann man zudem argumentieren, dass \S~157~BGB\index[paridx]{BGB!157@\S~157} insb. durch den Verweis auf die (aktuelle) \Zitat{Verkehrssitte} einen starken Gegenwartsbezug aufweist.
+Mit der \enquote{Vertragstheorie}, die davon ausgeht, dass die Satzung als Grundlagendokument einer privatrechtlichen Vereinigung letztlich ein privatrechtlicher Vertrag ist, der ein \enquote{Eigenleben} entwickelt hat, kann man zudem argumentieren, dass \S~157~BGB\indexPar{BGB!157@\S~157} insb. durch den Verweis auf die (aktuelle) \Zitat{Verkehrssitte} einen starken Gegenwartsbezug aufweist.
 Aus diesen Argumenten wird abgeleitet, dass sich die historische Auslegung allgemein verbietet.\footnote{\cite[Rn.~36]{sauter2010}.}
 Ausnahmen hiervon sind daher stets gut zu begründen!
 
@@ -178,11 +178,11 @@ In die Nähe der systematischen Auslegung rückt die Frage, was mit einer solche
 Die Antworten auf diese Fragen geben regelmäßig den Ausschlag, wenn bloße Wortlaut- und systematische Auslegung nicht weiter geholfen haben.
 
 In sehr seltenen Fällen kann der Sinngehalt einer Norm dazu führen, dass ein Begriff dahingehend uminterpretiert wird, dass er nun auch Begriffe umfasst, die vom Wortlaut eigentlich nicht gedeckt sind (s.o.); hier spricht man von einer \emph{teleologischen Erweiterung}.
-Umgekehrt kann ein Begriff auch \emph{teleologisch reduziert} werden, wenn aus Zweckmäßigkeitserwägungen auch Sachverhalte außen vor bleiben sollen, die eigentlich vom Wortlaut klar umfasst sind.\footnote{Ein Beispiel einer solchen teleologischen Korrektur ist die Auslegung des \S~8 Abs.~3 Nr.~3~SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3}, der von \enquote{Anträgen} im Plural spricht, wohingegen auch die Erhebung einer Klage unter Stellung nur eines einzelnen Antrags unzweifelhaft zulässig sein soll!}
+Umgekehrt kann ein Begriff auch \emph{teleologisch reduziert} werden, wenn aus Zweckmäßigkeitserwägungen auch Sachverhalte außen vor bleiben sollen, die eigentlich vom Wortlaut klar umfasst sind.\footnote{Ein Beispiel einer solchen teleologischen Korrektur ist die Auslegung des \S~8 Abs.~3 Nr.~3~SGO\indexPar{SGO!8@\S~8!3@Abs.~3}, der von \enquote{Anträgen} im Plural spricht, wohingegen auch die Erhebung einer Klage unter Stellung nur eines einzelnen Antrags unzweifelhaft zulässig sein soll!}
 Diese Methoden sind aber Ausnahmen, nicht die Regel!
 
 \subsection{Anwendbarkeit der Auslegungsmethoden für Schiedsgerichte}
-Als einzige Aussage der Satzung zu anwendbarem Recht und auch der Methodik, dieses zu erschließen, schreibt \S~2 Abs.~2 S.~2~SGO\index[paridx]{SGO!2@\S~2!2@Abs.~2} vor, dass Entscheidungen \Zitat{nach bestem Wissen und Gewissen} und \Zitat{auf Grundlage der Satzungen und gesetzlichen Vorgaben} zu fällen sind.
+Als einzige Aussage der Satzung zu anwendbarem Recht und auch der Methodik, dieses zu erschließen, schreibt \S~2 Abs.~2 S.~2~SGO\indexPar{SGO!2@\S~2!2@Abs.~2} vor, dass Entscheidungen \Zitat{nach bestem Wissen und Gewissen} und \Zitat{auf Grundlage der Satzungen und gesetzlichen Vorgaben} zu fällen sind.
 Diese Anweisung begrenzt die Wahl der Auslegungsmethoden nicht.
 Mit der teilweisen Ausnahme der historischen Auslegung, deren Grenzen auf der Grundlage gesetzlicher Vorgaben bereits dargestellt wurden, sind diese vier Methoden in der Schiedsgerichtsbarkeit der Piratenpartei anwendbar.
 Eine frühere Fassung dieses Paragraphen hatte die auf die Satzung und die Schiedsgerichtsordnung anwendbaren Methoden auf Wortlautauslegung und teleologische Interpretation begrenzt, ist jedoch inzwischen weggefallen.
