--- a/Zulaessigkeit.tex
+++ b/Zulaessigkeit.tex
@@ -33,7 +33,7 @@ Zur Nachbesserung im Allgemeinen wird auf den Abschnitt \ref{Anrufung:Beschluss:
 Wird nicht nachgebessert, ist ein Endurteil zu erlassen, dass die Klage aus dem nicht nachgebesserten Grund als unzulässig ablehnt.
 
 Eine Rücknahme der Eröffnung ist nicht möglich, da sie in der SGO nicht vorgesehen ist.
-Insbesondere eine analoge Anwendung des \S~10 Abs.~1 SGO\index[paridx]{SGO!10@\S~10!1@Abs.~1} scheidet aus,\footnote{So aber fehlerhaft das Bundesschiedsgericht, \cite{BSGPP100127862}.} dies allein schon, da dieser Absatz der SGO das Verfahren und nicht etwa die Eröffnung regelt.\footnote{Dieser Beschluss ist in \S~8 Abs.~5 SGO\index[paridx]{SGO!8@\S~8!5@Abs.~5} geregelt.}
+Insbesondere eine analoge Anwendung des \S~10 Abs.~1 SGO\indexPar{SGO!10@\S~10!1@Abs.~1} scheidet aus,\footnote{So aber fehlerhaft das Bundesschiedsgericht, \cite{BSGPP100127862}.} dies allein schon, da dieser Absatz der SGO das Verfahren und nicht etwa die Eröffnung regelt.\footnote{Dieser Beschluss ist in \S~8 Abs.~5 SGO\indexPar{SGO!8@\S~8!5@Abs.~5} geregelt.}
 
 \subsection{Fehlende Schlichtung}
 \label{Zulaessigkeit:Wegfall:Schlichtung}
@@ -49,7 +49,7 @@ Die häufigste Variante für ein Wegfallen einer unechten Zulässigkeitsvorrauss
 
 In diesem Fall liegt für die Streitpartei kein Zugang mehr zur Parteischiedsgerichtsbarkeit vor und deren Zuständigkeit endet damit.
 Im Fall des Gliederungswechsels stellen Einspruchsverfahren gegen Ordnungsmaßnahmen und Parteiausschlussverfahren eine Ausnahme dar, da ansonsten die Disziplinargewalt der Partei und ihrer Gliederungen bzw. der Rechtsschutzanspruch des Mitglieds unterlaufen würde.
-Ein Gliederungswechsel dürfte während eines solchen laufenden Verfahrens ohnehin nur zulässig sein, wenn ein tatsächlicher Wohnsitzwechsel vorliegt, da ein solch laufendes Verfahren das Musterbeispiel eines Grundes für eine Versagung der freien Gliederungswahl nach \S~3 Abs.~2a Satz~2 BS\index[paridx]{BS!3@\S~3!2a@Abs.~2a} (\enquote{[\dots] nachhvollziehbare Gründe, die den Organisationsinteressen nicht entgegenstehen [\dots]}) darstellen dürfte.
+Ein Gliederungswechsel dürfte während eines solchen laufenden Verfahrens ohnehin nur zulässig sein, wenn ein tatsächlicher Wohnsitzwechsel vorliegt, da ein solch laufendes Verfahren das Musterbeispiel eines Grundes für eine Versagung der freien Gliederungswahl nach \S~3 Abs.~2a Satz~2 BS\indexPar{BS!3@\S~3!2a@Abs.~2a} (\enquote{[\dots] nachhvollziehbare Gründe, die den Organisationsinteressen nicht entgegenstehen [\dots]}) darstellen dürfte.
 
 Das gilt natürlich auch bei Ausschluss aus der Partei\footnote{Siehe hierzu auch \cite{BSG2314HS}.} oder Austritt des Verfahrensgegners.\footnote{Vgl. hierzu lediglich einen Nichteröffnungsbeschluss zu einer Berufung \cite{BSG2214HS}.}
 Während der Tod des Mitglieds das Mitgliedschaftsverhältnis beendet und somit ein Mitglied als Streitpartei im Verfahren nicht beerbt werden kann, tritt im Falle einer Auflösung einer Gliederung immer eine andere Gliederung oder notfalls der Bundesverband die Rechtsnachfolge an und das Verfahren ist ggf. mit dem Rechtsnachfolger der urspründlichen Streitpartei weiterzuführen.
