--- a/A_Schemata.tex
+++ b/A_Schemata.tex
@@ -15,7 +15,7 @@ Hierzu ausführlich: Kapitel~\ref{Anrufung}.
 
 \begin{enumerate}[label=\Roman*.]
 \item Zuständigkeit des Schiedsgerichts
-\item Prüfung der durch Satzung vermuteten Befangenheit (\S~5 Abs.~1~SGO)\index[paridx]{SGO!5@\S~5!1@Abs.~1}
+\item Prüfung der durch Satzung vermuteten Befangenheit (\S~5 Abs.~1~SGO)\indexPar{SGO!5@\S~5!1@Abs.~1}
 \item Antragsteller
 	\begin{enumerate}
 	\item Name
