--- a/A_Vorlagen.tex
+++ b/A_Vorlagen.tex
@@ -80,10 +80,10 @@ Das Landesschiedsgericht hat weiterin beschlossen:
 \item Nach §~5~Abs.~5~S.~1~SGO steht es den Verfahrensbeteiligten frei, binnen \textbf{2~Wochen} die Ablehnung von Richtern wegen der Besorgnis der Befangenheit zu beantragen. Die Möglichkeit einer Ablehnung aus Gründen, die im Verfahren offenbar werden, bleibt davon unbenommen.
 \item Jeder Verfahrensbeteiligte kann eine Vertretung benennen. Der (Gliederungs)vorstand wird aufgefordert nach §~9~Abs.~3~S.~1~SGO einen Vertreter zu benennen.
 \item Dem Antragsgegner wird aufgegeben, auf das Klagevorbringen innerhalb von \textbf{2~Wochen} in Textform zu erwidern, wenn er sich gegen die Klage verteidigen will.
-\item (Im Fall von OM/PAV) Der (Antragsteller bei OM, Antragsgegner bei PAV) wird gebeten mitzuteilen, ob ein nichtöffentliches Verfahren geführt werden soll, \S~9 Abs.~4~SGO.\index[paridx]{SGO!9@\S~9!4@Abs.~4}
+\item (Im Fall von OM/PAV) Der (Antragsteller bei OM, Antragsgegner bei PAV) wird gebeten mitzuteilen, ob ein nichtöffentliches Verfahren geführt werden soll, \S~9 Abs.~4~SGO.\indexPar{SGO!9@\S~9!4@Abs.~4}
 \item Der Antragsteller erhält nach Eingang der Erwiderung \textbf{2~Wochen} zur Erwiderung.
 \item Die Kommunikation mit dem Schiedsgericht erfolgt grundsätzlich per E-Mail. Alle weitere Korrespondenz soll im Betreff das Aktenzeichen (Aktenzeichen) tragen.
-\item Das Landesschiedsgericht hat als Termin für die mündliche Verhandlung gemäß \S~10 Abs.~4 ff.~SGO\index[paridx]{SGO!10@\S~10!4@Abs.~4} den (Datum der geplanten mündlichen Verhandlung) vorgemerkt und bittet bereits jetzt um Stellungnahme zum Termin um baldestmöglich laden zu können.
+\item Das Landesschiedsgericht hat als Termin für die mündliche Verhandlung gemäß \S~10 Abs.~4 ff.~SGO\indexPar{SGO!10@\S~10!4@Abs.~4} den (Datum der geplanten mündlichen Verhandlung) vorgemerkt und bittet bereits jetzt um Stellungnahme zum Termin um baldestmöglich laden zu können.
 \end{enumerate}
 
 %\section{Besetzungsänderung} % ???
@@ -97,7 +97,7 @@ hat das Schiedsgericht durch die Richter*innen (Aufzählung der an der Beschluss
 \begin{enumerate}
 \item	Die mündliche Verhandlung findet als mündliche Präsenzsitzung am (Verhandlungsdatum) um (Uhrzeit) in (Verhandlungsort mit Postanschrift und Raum) statt.
 \item	Die Verhandlung ist öffentlich.
-	Die Öffentlichkeit kann nur auf Antrag ausgeschlossen werden, \SSS~9 Abs.~4, 10 Abs.~7~SGO.\index[paridx]{SGO!9@\S~9!4@Abs.~4}\index[paridx]{SGO!10@\S~10!4@Abs.~4}
+	Die Öffentlichkeit kann nur auf Antrag ausgeschlossen werden, \SSS~9 Abs.~4, 10 Abs.~7~SGO.\indexPar{SGO!9@\S~9!4@Abs.~4}\indexPar{SGO!10@\S~10!4@Abs.~4}
 \item	Den Verfahrensparteien wird aufgegeben, folgende Fragen bis zum (Vorbereitungsdatum) zu beantworten:
 	\begin{enumerate}
 	\item (Fragen)
@@ -108,7 +108,7 @@ hat das Schiedsgericht durch die Richter*innen (Aufzählung der an der Beschluss
 \end{enumerate}
 
 Vorsorglich weist das (Schiedsgericht) darauf hin, dass ein Antrag auf Terminverlegung wegen Verhinderung begründet werden muss.
-Das (Schiedsgericht) kann auch in Abwesenheit verhandeln, \S~10 Abs.~5~SGO.\index[paridx]{SGO!10@\S~10!5@Abs.~5}
+Das (Schiedsgericht) kann auch in Abwesenheit verhandeln, \S~10 Abs.~5~SGO.\indexPar{SGO!10@\S~10!5@Abs.~5}
 
 Fristversäumnis, verspäteter Vortrag und verspätete Benennung von Zeug*innen kann dazu führen, dass der Vortrag nicht berücksichtigt und/oder die Zeug*innen nicht gehört werden.
 
@@ -157,7 +157,7 @@ Dadurch wurden von seinem Computer falsche Daten zur Einberufung des Parteitages
 \section{Rechtsbehelfsbelehrungen}
 \subsection{Sofortige Beschwerde: Nichteröffnung}
 \label{Vorlage:RMB_Eröffnungsbeschwerde}
-Gegen die Ablehnung der Verfahrenseröffnung ist die sofortige Beschwerde mit einer Frist von 14~Tagen beim (Berufungsgericht mit Post- und E-Mail-Anschrift) zulässig, \S~8 Abs.~6 S.~3~SGO.\index[paridx]{SGO!8@\S~8!6@Abs.~6}
+Gegen die Ablehnung der Verfahrenseröffnung ist die sofortige Beschwerde mit einer Frist von 14~Tagen beim (Berufungsgericht mit Post- und E-Mail-Anschrift) zulässig, \S~8 Abs.~6 S.~3~SGO.\indexPar{SGO!8@\S~8!6@Abs.~6}
 
 \subsection{Berufung}
 \label{Vorlage:RMB_Berufung}
@@ -167,13 +167,13 @@ Der Berufungsschrit ist die angefochtene Entscheidung samt erstinstanzlichem Akt
 
 \subsection{Widerspruch gegen einstweilige Anordnung)}
 \label{Vorlage:RMB_einstweilige}
-Gegen die einstweilige Anordnung kann innerhalb von 14~Tagen nach Bekanntgabe und Erhalt der Begründung beim erlassenden Schiedsgericht ([eigenes Schiedsgericht mit Post- und E-Mail-Anschrift]) Widerspruch erhoben werden, \S~11 Abs.~4 S.~1~SGO.\index[paridx]{SGO!11@\S~11!4@Abs.~4}
-Ein Widerspruch hat keine aufschiebende Wirkung, \S~11 Abs.~4 S.~2~SGO.\index[paridx]{SGO!\S~11!4@Abs.~4}
+Gegen die einstweilige Anordnung kann innerhalb von 14~Tagen nach Bekanntgabe und Erhalt der Begründung beim erlassenden Schiedsgericht ([eigenes Schiedsgericht mit Post- und E-Mail-Anschrift]) Widerspruch erhoben werden, \S~11 Abs.~4 S.~1~SGO.\indexPar{SGO!11@\S~11!4@Abs.~4}
+Ein Widerspruch hat keine aufschiebende Wirkung, \S~11 Abs.~4 S.~2~SGO.\indexPar{SGO!11@\S~11!4@Abs.~4}
 
 \subsection{Befangenheitsentscheidung}
 \label{Vorlage:RMB_na}
-Vorsorglich weist das Gericht darauf hin, dass der Beschluss über den Ausschluss von Richter*innen wegen Befangenheit unanfechtbar ist, \S~5 Abs.~6 S.~1~SGO.\index[paridx]{SGO!5@\S~5!6@Abs.~6}
+Vorsorglich weist das Gericht darauf hin, dass der Beschluss über den Ausschluss von Richter*innen wegen Befangenheit unanfechtbar ist, \S~5 Abs.~6 S.~1~SGO.\indexPar{SGO!5@\S~5!6@Abs.~6}
 
 \subsection{Ordnungsmaßnahme}
-Gegen diese Ordnungsmaßnahme ist gemäß \S~8 Abs.~1 S.~2~SGO\index[paridx]{SGO!8@\S~8!1@Abs.~1} der Einspruch vor dem (Landesschiedsgericht des Landesverbands des Mitglieds) zulässig.
+Gegen diese Ordnungsmaßnahme ist gemäß \S~8 Abs.~1 S.~2~SGO\indexPar{SGO!8@\S~8!1@Abs.~1} der Einspruch vor dem (Landesschiedsgericht des Landesverbands des Mitglieds) zulässig.
 Gegen die Ablehnung ist die sofortige Beschwerde mit einer Frist von 14~Tagen zum nächsthöheren Schiedsgericht möglich.
