--- a/Urteilsaufbau.tex
+++ b/Urteilsaufbau.tex
@@ -6,13 +6,13 @@
 
 \section{Grundlagen}
 \label{Urteilsaufbau:Grundlagen}
-Gem. \S~12 Abs.~3 S.~1~SGO\index[paridx]{SGO!12@\S~12!3@Abs.~3} enthält ein Urteil \Zitat{einen Tenor, eine Sachverhaltsdarstellung und eine Begründung der Sach- und Rechtslage.}
+Gem. \S~12 Abs.~3 S.~1~SGO\indexPar{SGO!12@\S~12!3@Abs.~3} enthält ein Urteil \Zitat{einen Tenor, eine Sachverhaltsdarstellung und eine Begründung der Sach- und Rechtslage.}
 Es empfiehlt sich, dieser Aufzählung notwendiger Inhalte auch in der Reihenfolge zu folgen.
 Ein Urteil beginnt daher, nach einigen Formalien im \emph{Rubrum}, mit der letztendlichen Entscheidung des Gerichts.
 Sie wird im \emph{Tenor} aufgeführt.
 Erst danach wird der \emph{Sachverhalt} dargestellt und die im Tenor verkündeten Entscheidungen des Gerichts in den \emph{Entscheidungsgründen} begründet.
 Sofern gegen das Urteil Rechtsmittel eingelegt werden können, wird es mit einer \emph{Rechtsmittelbelehrung} abgeschlossen.
-Während gem. \S~11 Abs.~7~SGO\index[paridx]{SGO!11@\S~11!7@Abs.~7} lediglich die Dokumentationsvorschriften explizit auch für einstweilige Anordnungen gelten, ist es gängige Praxis, sämtliche Vorschriften über Urteile auf einstweilige Anordnungen sinngemäß anzuwenden.
+Während gem. \S~11 Abs.~7~SGO\indexPar{SGO!11@\S~11!7@Abs.~7} lediglich die Dokumentationsvorschriften explizit auch für einstweilige Anordnungen gelten, ist es gängige Praxis, sämtliche Vorschriften über Urteile auf einstweilige Anordnungen sinngemäß anzuwenden.
 
 Anders als bei Urteilen des Europäischen Gerichtshofes oder z.B. französischen Gerichten oder Gerichten aus dem angelsächsischen Rechtsraum werden Urteile in Deutschland regelmäßig in \enquote{ganz normalem Fließtext} verfasst, d.h. als mehrere Sätze, in Absätze unterteilt, regelmäßig mit Zwischenüberschriften bzw. Nummerierung gegliedert.
 Die Parteien werden im Rahmen der Schiedsgerichtsordnung schlicht als \emph{Antragstellerinnen} und \emph{Antragsgegnerinnen} bezeichnet (nicht etwa als Klägerinnen und Beklagte); \enquote{Angeklagte}\footnote{Der Begriff stammt aus dem Strafrecht; die Verwendung innerhalb eines Schiedsgerichtsverfahrens verbietet sich.} kennt die SGO auch im Falle von Ordnungsmaßnahmen nicht.
@@ -30,11 +30,11 @@ Das Rubrum wird in der Schiedsgerichtsordnung nicht explizit verlangt.
 Es hat sich dennoch in der Praxis sämtlicher Schiedsgerichte eingebürgert.
 Auf eine Formel vergleichbar zum bei staatlichen Gerichten verwendeten \Zitat{Im Namen des Volkes} wird dabei verzichtet und stattdessen schlicht mit den Worten \Zitat{In dem Verfahren (Aktenzeichen)} begonnen, woran sich die folgenden Angaben anschließen:
 \begin{itemize}
-\item Name und Anschrift der Antragstellerin (vgl. auch \S~8 Abs.~3~SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3}),
+\item Name und Anschrift der Antragstellerin (vgl. auch \S~8 Abs.~3~SGO\indexPar{SGO!8@\S~8!3@Abs.~3}),
 \item Name und Kontakt der Antragstellervertretung (\Zitat{vertreten durch…}),
 \item Bezeichnung der vorstehenden Partei als \Zitat{– Antragsteller(in) –},
 \item \Zitat{gegen},
-\item Name und Anschrift der Antragsgegnerin (vgl. auch \S~8 Abs.~3~SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3}),
+\item Name und Anschrift der Antragsgegnerin (vgl. auch \S~8 Abs.~3~SGO\indexPar{SGO!8@\S~8!3@Abs.~3}),
 \item Name und Kontakt der Antragsgegnervertretung (\Zitat{vertreten durch…}),
 \item Bezeichnung der vorstehenden Partei als \Zitat{– Antragsgegner(in) –},
 \item Bezeichnung des Streitgegenstandes (z.B. \Zitat{wegen Anfechtung von Parteitagsbeschlüssen}).
@@ -54,12 +54,12 @@ In einem Berufungsverfahren wird die Bezeichnung als \enquote{Antragstellerin} o
 \index[idx]{Urteilstenor|see{Tenor}}
 Der Tenor enthält die Entscheidung (oder die Entscheidungen) in der Hauptsache.
 
-Da die Verfahren vor den Schiedsgerichten der Piratenpartei immer kostenfrei sind (\S~16 Abs.~1 S.~1~SGO),\index[paridx]{SGO!16@\S~16!1@Abs.~1} kann eine Kostenentscheidung\index[idx]{Kosten!Entscheidung} entfallen.\footnote{Eine Kostenentscheidung muss auch auf expliziten Antrag einer Partei nicht getroffen werden, \cite{LSGNRW2016001HStreitwert}.}
+Da die Verfahren vor den Schiedsgerichten der Piratenpartei immer kostenfrei sind (\S~16 Abs.~1 S.~1~SGO),\indexPar{SGO!16@\S~16!1@Abs.~1} kann eine Kostenentscheidung\index[idx]{Kosten!Entscheidung} entfallen.\footnote{Eine Kostenentscheidung muss auch auf expliziten Antrag einer Partei nicht getroffen werden, \cite{LSGNRW2016001HStreitwert}.}
 Auch einer Entscheidung über vorläufige Vollstreckbarkeit\index[idx]{Vollstreckung!vorläufige} bedarf es nicht, da die SGO weder Vollstreckungsvorschriften vorsieht, noch Maßnahmen zur Zwangsvollstreckung kennt.
 Ebenso ist nicht notwendig, ein mögliches Rechtsmittel im Tenor aufzuführen, da über die Möglichkeit von Rechtsmitteln nicht durch das Gericht entschieden wird:
 Die Entscheidung, ob Rechtsmittel möglich sind, oder nicht, wird von der SGO getroffen.
 Da sie dem Gericht nicht überlassen ist, ist sie auch im Tenor nicht zu erwähnen.
-Sind Rechtsmittel möglich, sind die Parteien darüber gesondert zu belehren (\S~13 Abs.~2 S.~3~SGO\index[paridx]{SGO!13@\S~13!2@Abs.~2}, siehe unten).
+Sind Rechtsmittel möglich, sind die Parteien darüber gesondert zu belehren (\S~13 Abs.~2 S.~3~SGO\indexPar{SGO!13@\S~13!2@Abs.~2}, siehe unten).
 
 Die Entscheidungsformel ist der wichtigste Teil des Urteils.
 Sie ist besonders sorgfältig zu formulieren.
@@ -81,7 +81,7 @@ Aus diesem Grunde ist eine Feststellungsklage nur subsidiär\index[idx]{Feststel
 \section{Sachverhalt}
 \label{Urteilsaufbau:Sachverhalt}
 \index[idx]{Sachverhalt}
-Gemäß \S~12 Abs.~3 S.~1~SGO\index[paridx]{SGO!12@\S~12!3@Abs.~3} enthält ein Urteil unter anderem eine Sachverhaltsdarstellung.
+Gemäß \S~12 Abs.~3 S.~1~SGO\indexPar{SGO!12@\S~12!3@Abs.~3} enthält ein Urteil unter anderem eine Sachverhaltsdarstellung.
 In diesem Abschnitt sind die tatsächlichen Feststellungen, die der Entscheidung des Gerichts zu Grunde liegen, objektiv und neutral aufzuführen.
 Er muss aus sich heraus verständlich sein, Verweise sollten nur ausnahmsweise verwendet werden; insbesondere muss hier sichergestellt sein, dass die entsprechende Quelle auch nach geraumer Zeit noch verfügbar sein wird.
 Sind Teile von Dokumenten für die Entscheidung maßgeblich, sollten sie im entsprechenden Umfang zitiert werden, anstatt lediglich zu verweisen.
@@ -144,10 +144,10 @@ Wenngleich die Verwendung von \emph{obiter dicta} innerhalb der Schiedsgerichtsb
 \label{Urteilsaufbau:Sondervoten}
 \index[idx]{Sondervotum}
 \index[idx]{Abweichende Meinung|see{Sondervotum}}
-Gemäß \S~12 Abs.~4 S.~1~SGO\index[paridx]{SGO!12@\S~12!4@Abs.~4} haben die Richter \Zitat{das Recht, in der Urteilsbegründung eine abweichende Meinung zu äußern.}
-Dieses Recht besitzt unter den staatlichen Gerichten der Bundesrepublik Deutschland lediglich die Verfassungsgerichtsbarkeit (vgl. z.B. \S~30 Abs.~2~BVerfGG\index[paridx]{BVerfGG!30@\S~30!2@Abs.~2}).
+Gemäß \S~12 Abs.~4 S.~1~SGO\indexPar{SGO!12@\S~12!4@Abs.~4} haben die Richter \Zitat{das Recht, in der Urteilsbegründung eine abweichende Meinung zu äußern.}
+Dieses Recht besitzt unter den staatlichen Gerichten der Bundesrepublik Deutschland lediglich die Verfassungsgerichtsbarkeit (vgl. z.B. \S~30 Abs.~2~BVerfGG\indexPar{BVerfGG!30@\S~30!2@Abs.~2}).
 In der Piratenpartei steht es allen Richterinnen und Richtern zu, unabhängig von der Ebene ihres Schiedsgerichts.
-Die Bestimmung zu solchen abweichenden Meinungen (auch als \enquote{Sondervotum}, plural \enquote{Sondervoten}, bezeichnet) stellt damit eine der eben dort genannten Ausnahmen zur ansonsten geltenden Regel, über \enquote{dienstliche} Vorgänge Stillschweigen zu bewahren (\S~2 Abs.~4~SGO\index[paridx]{SGO!2@\S~2!4@Abs.~4}), dar.\index[idx]{Verschwiegenheitspflicht}
+Die Bestimmung zu solchen abweichenden Meinungen (auch als \enquote{Sondervotum}, plural \enquote{Sondervoten}, bezeichnet) stellt damit eine der eben dort genannten Ausnahmen zur ansonsten geltenden Regel, über \enquote{dienstliche} Vorgänge Stillschweigen zu bewahren (\S~2 Abs.~4~SGO\indexPar{SGO!2@\S~2!4@Abs.~4}), dar.\index[idx]{Verschwiegenheitspflicht}
 
 Obwohl der Wortlaut darauf hindeutet, dass die abweichende Meinung innerhalb der Urteilsbegründung formuliert werden soll, ist die Vorschrift in der bisherigen Praxis so ausgelegt worden, dass sie außerhalb der eigentlichen Urteilsbegründung, aber innerhalb des Urteils verfasst wird.
 Auf diese Weise bleibt die mehrheitlich beschlossene Begründung in sich konsistent und wird nicht durch Diskussionen innerhalb des Spruchkörpers unterbrochen.
@@ -155,12 +155,12 @@ Es empfiehlt sich stattdessen, die abweichende(n) Meinung(en) zusammenhängend a
 Das erleichtert insbesondere den Parteien, aber auch der Parteiöffentlichkeit und anderen Schiedsgerichten das Lesen.
 Sofern eine Rechtsmittelbelehrung (s.u.) erfolgt, sollte sie nach die abweichenden Meinungen gesetzt werden, um die abweichenden Meinungen weiter \Zitat{in der Urteilsbegründung} zu halten.
 
-Näheres zur abweichenden Meinung sollen die Schiedsgerichte in ihrer Geschäftsordnung regeln, \S~12 Abs.~4 S.~2~SGO\index[paridx]{SGO!12@\S~12!4@Abs.~4}.
+Näheres zur abweichenden Meinung sollen die Schiedsgerichte in ihrer Geschäftsordnung regeln, \S~12 Abs.~4 S.~2~SGO\indexPar{SGO!12@\S~12!4@Abs.~4}.
 
 \section{Die Rechtsmittelbelehrung}
 \label{Urteilsaufbau:Rechtsmittelbelehrung}
 \index[idx]{Rechtsmittelbelehrung}
-Eine Rechtsmittelbelehrung soll gemäß \S~12 Abs.~5~SGO\index[paridx]{SGO!12@\S~12!5@Abs.~5} zumindest dann erfolgen, wenn gegen das Urteil die Berufung möglich ist.
+Eine Rechtsmittelbelehrung soll gemäß \S~12 Abs.~5~SGO\indexPar{SGO!12@\S~12!5@Abs.~5} zumindest dann erfolgen, wenn gegen das Urteil die Berufung möglich ist.
 Die Vorschrift ist allerdings dahin auszulegen, dass die Parteien stets über mögliche Rechtsmittel belehrt werden sollen.
 
 Wann ein Rechtsmittel zulässig ist und wie in diesen Fällen zu verfahren ist, wird im Kapitel \enquote{Instanzenzug} beschrieben.
@@ -168,16 +168,16 @@ Wann ein Rechtsmittel zulässig ist und wie in diesen Fällen zu verfahren ist, 
 \subsection{Inhalt einer Rechtsmittelbelehrung}
 \label{Urteilsaufbau:Rechtsmittelbelehrung:Inhalt}
 Die Rechtsmittelbelehrung soll die Parteien darüber in Kenntnis setzen, welches Rechtsmittel bei welchem Gericht in welcher Form und in welcher Frist einzulegen ist.
-Das Rechtsmittel ist unter Zitat der entsprechenden Norm anzugeben (bspw. die Berufung gemäß \S~13 Abs.~1~SGO\index[paridx]{SGO!13@\S~13!1@Abs.~1}).
+Das Rechtsmittel ist unter Zitat der entsprechenden Norm anzugeben (bspw. die Berufung gemäß \S~13 Abs.~1~SGO\indexPar{SGO!13@\S~13!1@Abs.~1}).
 Zusätzlich zur (eindeutigen) Benennung des Gerichts sind Einreichungsmöglichkeiten anzugeben, also zumindest die Postanschrift, ggf. E-Mail Adresse und Faxnummer des Gerichts.
 Die Rechtsmittelbelehrung muss den Hinweis enthalten, dass die Einreichung in Textform (d.h. auch per E-Mail) ausreichend ist.
 Ebenso zu den Formvorschriften gehört der Hinweis, was die Berufung enthalten muss (nämlich das Aktenzeichen und die angegriffene Entscheidung des Gerichts).
 Ebenso ist die Frist zu nennen, wobei sie nicht berechnet werden muss:
-Es reicht aus, die Parteien darüber zu belehren, dass die Berufungsfrist gemäß \S~13 Abs.~2 S.~1~SGO\index[paridx]{SGO!13@\S~13!2@Abs.~2} 14~Tage beträgt, sie muss nicht in einem genauen Datum angegeben werden.
+Es reicht aus, die Parteien darüber zu belehren, dass die Berufungsfrist gemäß \S~13 Abs.~2 S.~1~SGO\indexPar{SGO!13@\S~13!2@Abs.~2} 14~Tage beträgt, sie muss nicht in einem genauen Datum angegeben werden.
 Diese Berechnung führt im Zweifel das Berufungsgericht aus, das an die Entscheidung der unteren Instanz ohnehin nicht gebunden wäre; die Gefahr, dass die Rechtsmittelbelehrung durch eine falsche Fristberechnung unrichtig wird, kann so umgangen werden.
 
 Die Rechtsmittelbelehrung ist nur für Berufungen normiert.\index[idx]{Rechtsmittel!Berufung}
-Außer der Berufung kennt die Schiedsgerichtsordnung allerdings noch den \emph{Widerspruch}\index[idx]{Rechtsmittel!Widerspruch} gegen einstweilige Anordnung (\S~11 Abs.~4~SGO)\index[paridx]{SGO!11@\S~11!4@Abs.~4} und die \emph{sofortige Beschwerde}\index[idx]{Rechtsmittel!sofortige Beschwerde} gegen die Ablehnung einer einstweiligen Anordnung (\S~11 Abs.~6~SGO)\index[paridx]{SGO!11@\S~11!6@Abs.~6}, die Nichteröffnung (\S~8 Abs.~6 S.~3~SGO)\index[paridx]{SGO!8@\S~8!6@Abs.~6} oder Verzögerung eines Verfahrens (\S~10 Abs.~8 S.~1,~2~SGO)\index[paridx]{SGO!10@\S~10!9@Abs.~9}, sowie den Nichtausschluss eines Richters vom Verfahren nach erfolgter Ablehnung (\S~5 Abs.~6 S.~2~SGO)\index[paridx]{SGO!5@\S~5!6@Abs.~6}.
+Außer der Berufung kennt die Schiedsgerichtsordnung allerdings noch den \emph{Widerspruch}\index[idx]{Rechtsmittel!Widerspruch} gegen einstweilige Anordnung (\S~11 Abs.~4~SGO)\indexPar{SGO!11@\S~11!4@Abs.~4} und die \emph{sofortige Beschwerde}\index[idx]{Rechtsmittel!sofortige Beschwerde} gegen die Ablehnung einer einstweiligen Anordnung (\S~11 Abs.~6~SGO)\indexPar{SGO!11@\S~11!6@Abs.~6}, die Nichteröffnung (\S~8 Abs.~6 S.~3~SGO)\indexPar{SGO!8@\S~8!6@Abs.~6} oder Verzögerung eines Verfahrens (\S~10 Abs.~8 S.~1,~2~SGO)\indexPar{SGO!10@\S~10!9@Abs.~9}, sowie den Nichtausschluss eines Richters vom Verfahren nach erfolgter Ablehnung (\S~5 Abs.~6 S.~2~SGO)\indexPar{SGO!5@\S~5!6@Abs.~6}.
 Im Gegensatz zu den Dokumentationsvorschriften ist eine Anwendbarkeit der Vorschriften über die Rechtsmittelbelehrung auf diese Institute in der Schiedsgerichtsordnung nicht explizit vorgesehen.
 Die Abhängigkeit einer Belehrung über Verfahrensschritte im Rechtsschutz sollte allerdings von der konkreten Verfahrensart unabhängig sein.
 Es ist daher eher anzunehmen, dass die Vorschriften über die Belehrung zum Rechtsmittel \emph{Berufung} auf die anderen Rechtsmittel der SGO analog anzuwenden sind.
@@ -187,7 +187,7 @@ Insbesondere eine korrekte Belehrung schadet in keinem Falle.
 \label{Urteilsaufbau:Rechtsmittelbelehrung:Falsch}
 \index[idx]{Rechtsmittelbelehrung!unrichtige}
 \index[idx]{Rechtsmittelbelehrung!fehlende}
-Ist die Rechtsmittelbelehrung unterblieben, so beginnt die Rechtsmittelfrist nicht zu laufen, \S~13 Abs.~2 S.~3~SGO\index[paridx]{SGO!13@\S~13!2@Abs.~2}.\footnote{Anderer Ansicht ist offenbar neuerdings das Bundesschiedsgericht, dem zufolge eine solche, dem \S~58~VwGO\index[paridx]{VwGO!58@\S~58} entsprechende Regelung, in der SGO nicht enthalten ist, \cite{BSGPP100132493}.}
+Ist die Rechtsmittelbelehrung unterblieben, so beginnt die Rechtsmittelfrist nicht zu laufen, \S~13 Abs.~2 S.~3~SGO\indexPar{SGO!13@\S~13!2@Abs.~2}.\footnote{Anderer Ansicht ist offenbar neuerdings das Bundesschiedsgericht, dem zufolge eine solche, dem \S~58~VwGO\indexPar{VwGO!58@\S~58} entsprechende Regelung, in der SGO nicht enthalten ist, \cite{BSGPP100132493}.}
 Dies ändert nichts an der Ausschlussfrist von 3~Monaten nach Zugang, nach der eine Entscheidung unanfechtbar ist.
 Effektiv verlängert sich bei einer fehlenden Rechtsmittelbelehrung also die Berufungsfrist von 14~Tagen auf 3~Monate nach Zustellung des (unvollständigen) Urteils.
 
